# snake

./: CMakeLists.txt  error.txt
include/: config.h  hooks.h  math_utils.h  memory.h  renderer.h  settings.h
include/features/: combat.h  misc.h  visuals.h
include/sdk/: client_dll.hpp  offsets.hpp  sdk.h
src/: config.cpp  hooks.cpp  main.cpp  math.cpp  math_utils.cpp  memory.cpp  renderer.cpp
src/features/: combat.cpp  misc.cpp  visuals.cpp
